# ferrix

./: Cargo.toml  settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
examples/pytorch-resnet/: README.md  ferrix.toml  handler.py  pyproject.toml  train.py
ferrix-cli/: Cargo.toml
ferrix-cli/src/: main.rs
ferrix-model-api/: Cargo.toml
ferrix-model-api/src/: internal.rs  lib.rs  python.rs
ferrix-model-candle/: Cargo.toml
ferrix-model-candle/src/: lib.rs
ferrix-model-onnx/: Cargo.toml
ferrix-model-onnx/src/: lib.rs
ferrix-model-pytorch/: Cargo.toml
ferrix-model-pytorch/src/: lib.rs
ferrix-protos/: Cargo.toml  build.rs
ferrix-protos/src/: lib.rs
ferrix-python/: Cargo.toml  pyproject.toml
ferrix-python-hooks/: Cargo.toml
ferrix-python-hooks/src/: lib.rs  test.py
ferrix-python/python/ferrix/: __init__.py  ferrix.pyi
ferrix-python/src/: lib.rs
ferrix-server/: Cargo.toml
ferrix-server/src/: inference.rs  lib.rs
