[package]
name = "ferrix-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ferrix-server = { path = "../ferrix-server" }
ferrix-model-api = { path = "../ferrix-model-api" }
ferrix-model-pytorch = { path = "../ferrix-model-pytorch" }
ferrix-protos = { path = "../ferrix-protos" }
clap = { version = "4.4.6", features = ["derive"] }
toml = "0.8.2"