[package]
name = "ferrix-model-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-option = "0.1.2"
ferrix-model-api = { path = "../ferrix-model-api" }
ferrix-protos = { path = "../ferrix-protos" }
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }