[package]
name = "ferrix-model-onnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = "1.15.2"
atomic-option = "0.1.2"
ferrix-model-api = { path = "../ferrix-model-api" }
ferrix-protos = { path = "../ferrix-protos" }