[package]
name = "ferrix-python-hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.20.0"
ferrix-model-api = { path = "../ferrix-model-api" }
ferrix-protos = { path = "../ferrix-protos" }
numpy = "0.20.0"
once_cell = "1.18.0"
