[package]
name = "ferrix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.18"
serde = { version = "1.0.164", features = ["derive"] }
ferrix-model-api = { path = "../ferrix-model-api" }
ferrix-protos = { path = "../ferrix-protos" }

[build-dependencies]
prost-build = "0.11.9"
protoc-bin-vendored = "3.0.0"
tonic-build = "0.9.2"